SERVER-22234 The Validate Command Should Work with failIndexKeyTooLong