src/mongo/db/commands/validate.cpp
@@ -107,14 +107,14 @@ public:
         if (!status.isOK())
             return appendCommandStatus(result, status);
 
-        result.appendBool("valid", results.valid);
-        result.append("errors", results.errors);
-
         if (!full) {
-            result.append(
-                "warning",
+            results.warnings.push_back(
                 "Some checks omitted for speed. use {full:true} option to do more thorough scan.");
         }
+
+        result.appendBool("valid", results.valid);
+        result.append("warnings", results.warnings);
+        result.append("errors", results.errors);
 
         if (!results.valid) {
             result.append("advice", "ns corrupt. See http://dochub.mongodb.org/core/data-recovery");
